# lemmatizer-uk

./: .gitlab-ci.yml  CMakeLists.txt  LICENSE  README.md  lemmatize_uk.c
cmake/builds/: CommonDeb.cmake  CommonRpm.cmake  build_default.cmake
